Fix dialog sizing on smaller device widths.
(#1061)

--- a/admin/themes/default/css/sass/components/_modals.scss
+++ b/admin/themes/default/css/sass/components/_modals.scss
@@ -5,6 +5,13 @@ dialog.o-modal {
     position: relative;
 }
 
+@include screen-ltmd {
+    dialog.o-modal {
+        min-width: 0;
+        max-width: calc(100% - 1rem);
+    }
+}
+
 dialog.o-modal::backdrop {
     background-color: rgba(0,0,0,.45);
 }
